3546.	[func]		Add EUI48 and EUI64 types. [RT #33082]

3545.	[bug]		RRL slip behavior was incorrect when set to 1.
			[RT #33111]

3544.	[contrib]	check5011.pl: Script to report the status of
			managed keys as recorded in managed-keys.bind.
			Contributed by Tony Finch <dot@dotat.at>

3543.	[bug]		Update socket stucture before attaching to socket
			manager after accept. [RT #33084]

3542.	[placeholder]

3541.	[bug]		Parts of libdns were not properly initialized when
			built in libexport mode. [RT #33028]

3540.	[test]		libt_api: t_info and t_assert were not thread safe.

3539.	[port]		win32: timestamp format didn't match other platforms.

3538.	[test]		Running "make test" now requires loopback interfaces
			to be set up. [RT #32452]

3537.	[tuning]	Slave zones, when updated, now send NOTIFY messages
			to peers before being dumped to disk rather than
			after. [RT #27242]

3536.	[func]		Add support for setting Differentiated Services Code
			Point (DSCP) values in named.  Most configuration
			options which take a "port" option (e.g.,
			listen-on, forwarders, also-notify, masters,
			notify-source, etc) can now also take a "dscp"
			option specifying a code point for use with
			outgoing traffic, if supported by the underlying
			OS. [RT #27596]

3535.	[bug]		Minor win32 cleanups. [RT #32962]

3534.	[bug]		Extra text after an embedded NULL was ignored when
			parsing zone files. [RT #32699]

3533.	[contrib]	query-loc-0.4.0: memory leaks. [RT #32960]

3532.	[contrib]	zkt: fixed buffer overrun, resource leaks. [RT #32960]

3531.	[bug]		win32: A uninitialized value could be returned on out
			of memory. [RT #32960]

3530.	[contrib]	Better RTT tracking in queryperf. [RT #30128]

3529.	[func]		Named now listens on both IPv4 and IPv6 interfaces
			by default.  Named previously only listened on IPv4
			interfaces by default unless named was running in
			IPv6 only mode.  [RT #32945]

3528.	[func]		New "dnssec-coverage" command scans the timing