@@ -1,3 +1,6 @@
+3547.	[bug]		Some malformed unknown rdata records were not properly
+			detected and rejected. [RT #33129]
+
 3546.	[func]		Add EUI48 and EUI64 types. [RT #33082]
 
 3545.	[bug]		RRL slip behavior was incorrect when set to 1.
